stored-procedures Init

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,5 +27,7 @@
     </th:block>
     </tbody>
 </table>
+<span> Total count: <span th:text="${totalCount}"></span></span><br/>
+<span>Online count: <span th:text="${onlineCount}"></span></span>
 </body>
 </html>
